# repo2docker-checker

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  inrepo.py  pyproject.toml  repo2docker-checker  repo2docker_checker.py  requirements-dev.txt  requirements.in  requirements.txt  update-slugs.py
.github/workflows/: ci.yaml
repo2docker_checker/: __init__.py  __main__.py  checker.py  inrepo.py
tests/: conftest.py  fails.ipynb  passes.ipynb  test_checker.py  test_inrepo.py
